# py-economic-complexity

./: .editorconfig  .gitignore  .pylintrc  LICENSE  PACKAGE.md  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
complexity/: __init__.py  complexity.py  cross_proximity.py  cross_relatedness.py  cross_space.py  distance.py  opportunity_gain.py  product_space.py  proximity.py  rca.py  relatedness.py
complexity_pkg_mcperez.egg-info/: PKG-INFO  SOURCES.txt
docs/: TUTORIAL.ipynb  TUTORIAL.md
economic_complexity/: __init__.py  complexity.py  cross_space.py  product_space.py  rca.py  subnational.py
economic_complexity/pandas/: __init__.py  complexity.py  opp_gain.py  pmi.py  proximity.py  rca.py  relatedness.py  similarity.py
economic_complexity/polars/: __init__.py  complexity.py  product_space.py  rca.py  run.py
tests/: __init__.py  conftest.py  fixture_exports.csv  global_exports.csv  subnat_exports.csv  test_complexity.py  test_cross_space.py  test_product_space.py  test_rca.py  test_subnational.py
