[tool.poetry]
name = "economic-complexity"
version = "0.1.4"
description = "Functions to calculate Economic Complexity indicators."
authors = [
  "Jelmy Hermosilla <jelmy@datawheel.us>",
  "Nicolas Netz <nicolas.netz@datawheel.us>",
  "Marcos Perez <marcos@datawheel.us>",
]
maintainers = [
  "Francisco Abarzua <francisco@datawheel.us>",
]
license = "MIT"
readme = "PACKAGE.md"
repository = "https://github.com/Datawheel/py-economic-complexity"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
pandas = "^1.1.0"
polars = "^0.18.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
pytest = "^7.4.0"
polars = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
